// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WoZ benchmark -- ghostfolio > engine signal ID set matches regression baseline (snapshot) 1`] = `
[
  "CRYPTO-01",
  "CRYPTO-02",
  "CRYPTO-03",
  "CRYPTO-04",
  "CTX-01",
  "CTX-02",
  "CTX-03",
  "CTX-04",
  "CTX-05",
  "DATA-01",
  "DATA-02",
  "DATA-03",
  "DATA-04",
  "DATA-05",
  "EGR-01",
  "INV-01",
  "INV-02",
  "INV-03",
  "INV-04",
  "INV-05",
  "SBOM-01",
  "SBOM-02",
  "SBOM-03",
  "STATE-01",
  "STATE-02",
  "STATE-03",
  "STATE-04",
  "TF-01",
  "TF-02",
  "TF-03",
  "TF-04",
  "TF-05",
]
`;

exports[`WoZ benchmark -- medplum > engine signal ID set matches regression baseline (snapshot) 1`] = `
[
  "CRYPTO-01",
  "CTX-01",
  "CTX-02",
  "CTX-03",
  "DATA-01",
  "DATA-02",
  "DATA-03",
  "EGR-01",
  "INV-01",
  "INV-02",
  "INV-04",
  "INV-05",
  "SBOM-01",
  "SBOM-02",
  "STATE-01",
  "STATE-03",
  "STATE-04",
  "TF-01",
  "TF-02",
  "TF-03",
  "TF-04",
  "TF-05",
]
`;

exports[`WoZ benchmark -- sovereign-health > engine signal ID set matches regression baseline (snapshot) 1`] = `
[
  "CRYPTO-01",
  "CRYPTO-02",
  "CTX-01",
  "CTX-02",
  "CTX-03",
  "DATA-01",
  "DATA-02",
  "DATA-03",
  "EGR-01",
  "INV-01",
  "INV-04",
  "INV-05",
  "SBOM-01",
  "SBOM-02",
  "STATE-03",
  "STATE-04",
  "TF-01",
  "TF-02",
  "TF-03",
  "TF-04",
  "TF-05",
]
`;
